--- a/style.css
+++ b/style.css
@@ -53,26 +53,41 @@ footer {
 }
 
 #chat-container {
-    width: 900px; /* Adjust width as needed */
-    margin: auto; /* Center the chatbox */
+    width: 300px;
+    margin: auto;
     padding: 10px;
     border: 1px solid #ddd;
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-    position: relative;
+    background-color: #720455;
 }
 
-#chatbox div {
-    height: 900px; /* Adjust height as needed */
-    overflow-y: auto; /* Enable scroll for overflow */
-    border: 1px solid #ccc;
+#chatbox {
+    height: 150px;
+    overflow-y: auto;
+    border: 1px solid #720455;
     margin-bottom: 10px;
     padding: 5px;
+    background-color: white;
 }
 
 #userInput {
-    width: calc(100% - 20px); /* Full width of the container minus padding */
+    width: calc(100% - 22px);
     padding: 5px;
+    border: 1px solid #ccc;
+    margin-bottom: 5px;
 }
+
+.send-button {
+    width: 100%;
+    padding: 5px;
+    border: none;
+    background-color: #720455;
+    color: white;
+    cursor: pointer;
+}
+
+.send-button:hover {
+    background-color: #0056b3;
+}
+
 
 
